--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-chartjs-2": "2.11.1",
+    "react-confirm-alert": "^2.7.0",
     "react-dnd": "14.0.2",
     "react-dnd-html5-backend": "14.0.0",
     "react-dom": "^17.0.2",
