--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-tag-input": "6.7.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
+    "uuidv4": "^6.2.11",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
