--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-tag-input": "6.7.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
-    "uuidv4": "^6.2.11",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -81,6 +81,7 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/react-table": "^7.7.2",
     "@types/react-tag-input": "^6.1.3",
-    "@types/styled-components": "^5.1.11"
+    "@types/styled-components": "^5.1.11",
+    "@types/uuid": "^8.3.1"
   }
 }
