--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dnd": "14.0.2",
     "react-dnd-html5-backend": "14.0.0",
     "react-dom": "^17.0.2",
+    "react-loading-skeleton": "^2.2.0",
     "react-markdown-editor-lite": "^1.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
