--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^2.2.0",
     "react-markdown-editor-lite": "^1.3.0",
+    "react-paginate": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
@@ -79,6 +80,7 @@
     "@storybook/react": "^6.3.4",
     "@types/chart.js": "2.9.32",
     "@types/markdown-it": "^12.0.3",
+    "@types/react-paginate": "^7.1.1",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-table": "^7.7.2",
     "@types/react-tag-input": "^6.1.3",
