--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
     "react-tag-input": "6.7.3",
+    "rodolfohiok-sdk": "2.6.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
