--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@mdi/js": "^5.9.55",
     "@mdi/react": "^1.5.0",
+    "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -26,10 +27,12 @@
     "react-loading-skeleton": "^2.2.0",
     "react-markdown-editor-lite": "^1.3.0",
     "react-paginate": "^7.1.3",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
     "react-tag-input": "6.7.3",
+    "redux": "^4.1.1",
     "rodolfohiok-sdk": "2.6.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
