--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "axios": "^0.21.1",
     "chart.js": "2.9.4",
     "date-fns": "^2.23.0",
+    "jwt-decode": "^3.1.2",
     "markdown-it": "^12.1.0",
+    "pkce-challenge": "^2.2.0",
     "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-chartjs-2": "2.11.1",
@@ -33,14 +35,14 @@
     "react-table": "^7.7.0",
     "react-tag-input": "6.7.3",
     "redux": "^4.1.1",
-    "rodolfohiok-sdk": "2.7.0",
+    "rodolfohiok-sdk": "^3.0.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
