--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "cypress:open": "cypress open",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
@@ -91,6 +92,7 @@
     "@types/react-table": "^7.7.2",
     "@types/react-tag-input": "^6.1.3",
     "@types/styled-components": "^5.1.11",
-    "@types/uuid": "^8.3.1"
+    "@types/uuid": "^8.3.1",
+    "cypress": "^8.5.0"
   }
 }
