--- a/package.json
+++ b/package.json
@@ -3,43 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mdi/js": "^5.9.55",
-    "@mdi/react": "^1.5.0",
-    "@reduxjs/toolkit": "^1.6.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "axios": "^0.21.1",
-    "chart.js": "2.9.4",
-    "date-fns": "^2.23.0",
+    "@mdi/js": "^7.2.96",
+    "@mdi/react": "^1.6.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.52",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "axios": "^1.5.0",
+    "chart.js": "4.4.0",
+    "date-fns": "^2.30.0",
     "jwt-decode": "^3.1.2",
-    "markdown-it": "^12.1.0",
-    "pkce-challenge": "^2.2.0",
-    "polished": "^4.1.3",
-    "react": "^17.0.2",
-    "react-chartjs-2": "2.11.1",
-    "react-confirm-alert": "^2.7.0",
+    "markdown-it": "^13.0.1",
+    "pkce-challenge": "^4.0.1",
+    "polished": "^4.2.2",
+    "react": "^18.2.0",
+    "react-chartjs-2": "5.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dnd": "14.0.2",
     "react-dnd-html5-backend": "14.0.0",
-    "react-dom": "^17.0.2",
-    "react-loading-skeleton": "^2.2.0",
-    "react-markdown-editor-lite": "^1.3.0",
-    "react-paginate": "^7.1.3",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-table": "^7.7.0",
-    "react-tag-input": "6.7.3",
-    "redux": "^4.1.1",
-    "rodolfohiok-sdk": "3.2.0",
-    "styled-components": "^5.3.0",
-    "typescript": "^4.1.2",
-    "uuid": "^8.3.2",
-    "web-vitals": "^1.0.1"
+    "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.3.1",
+    "react-markdown-editor-lite": "^1.3.4",
+    "react-paginate": "^8.2.0",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
+    "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
+    "react-tag-input": "6.8.1",
+    "redux": "^4.2.1",
+    "rodolfohiok-sdk": "3.2.5",
+    "styled-components": "^6.0.8",
+    "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -79,20 +79,22 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.3.4",
-    "@storybook/addon-essentials": "^6.3.4",
-    "@storybook/addon-links": "^6.3.4",
-    "@storybook/node-logger": "^6.3.4",
-    "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.4",
-    "@types/chart.js": "2.9.32",
-    "@types/markdown-it": "^12.0.3",
+    "@babel/plugin-transform-private-property-in-object": "^7.22.11",
+    "@storybook/addon-actions": "^7.4.2",
+    "@storybook/addon-essentials": "^7.4.2",
+    "@storybook/addon-links": "^7.4.2",
+    "@storybook/node-logger": "^7.4.2",
+    "@storybook/preset-create-react-app": "^7.4.2",
+    "@storybook/react": "^7.4.2",
+    "@types/chart.js": "2.9.38",
+    "@types/markdown-it": "^13.0.1",
     "@types/react-paginate": "^7.1.1",
-    "@types/react-router-dom": "^5.1.8",
-    "@types/react-table": "^7.7.2",
-    "@types/react-tag-input": "^6.1.3",
-    "@types/styled-components": "^5.1.11",
-    "@types/uuid": "^8.3.1",
-    "cypress": "^8.5.0"
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-table": "^7.7.15",
+    "@types/react-tag-input": "^6.6.1",
+    "@types/styled-components": "^5.1.27",
+    "@types/uuid": "^9.0.4",
+    "cypress": "^13.2.0",
+    "styled-components.macro": "^1.0.0"
   }
 }
