--- a/package.json
+++ b/package.json
@@ -3,43 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mdi/js": "^7.2.96",
+    "@mdi/js": "^7.3.67",
     "@mdi/react": "^1.6.1",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.52",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
-    "axios": "^1.5.0",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.0",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.8",
+    "@types/node": "^20.9.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "axios": "^1.6.1",
     "chart.js": "4.4.0",
     "date-fns": "^2.30.0",
-    "jwt-decode": "^3.1.2",
-    "markdown-it": "^13.0.1",
+    "jwt-decode": "^4.0.0",
+    "markdown-it": "^13.0.2",
     "pkce-challenge": "^4.0.1",
     "polished": "^4.2.2",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-chartjs-2": "5.2.0",
     "react-confirm-alert": "^3.0.6",
-    "react-dnd": "14.0.2",
-    "react-dnd-html5-backend": "14.0.0",
+    "react-dnd": "16.0.1",
+    "react-dnd-html5-backend": "16.0.1",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.3.1",
     "react-markdown-editor-lite": "^1.3.4",
     "react-paginate": "^8.2.0",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.16.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "react-tag-input": "6.8.1",
     "redux": "^4.2.1",
-    "rodolfohiok-sdk": "3.2.6",
-    "styled-components": "^6.0.8",
-    "typescript": "^4.9.5",
+    "rodolfohiok-sdk": "3.2.10",
+    "styled-components": "^6.1.1",
+    "typescript": "^5.2.2",
     "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -80,21 +81,22 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.22.11",
-    "@storybook/addon-actions": "^7.4.2",
-    "@storybook/addon-essentials": "^7.4.2",
-    "@storybook/addon-links": "^7.4.2",
-    "@storybook/node-logger": "^7.4.2",
-    "@storybook/preset-create-react-app": "^7.4.2",
-    "@storybook/react": "^7.4.2",
-    "@types/chart.js": "2.9.38",
-    "@types/markdown-it": "^13.0.1",
-    "@types/react-paginate": "^7.1.1",
+    "@storybook/addon-actions": "^7.5.3",
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-links": "^7.5.3",
+    "@storybook/node-logger": "^7.5.3",
+    "@storybook/preset-create-react-app": "^7.5.3",
+    "@storybook/react": "^7.5.3",
+    "@types/chart.js": "2.9.40",
+    "@types/markdown-it": "^13.0.6",
+    "@types/qs": "^6.9.10",
+    "@types/react-paginate": "^7.1.4",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-table": "^7.7.15",
-    "@types/react-tag-input": "^6.6.1",
-    "@types/styled-components": "^5.1.27",
-    "@types/uuid": "^9.0.4",
-    "cypress": "^13.2.0",
+    "@types/react-table": "^7.7.18",
+    "@types/react-tag-input": "^6.6.4",
+    "@types/styled-components": "^5.1.30",
+    "@types/uuid": "^9.0.7",
+    "cypress": "^13.4.0",
     "styled-components.macro": "^1.0.0"
   }
 }
